syntax = "proto3";

package recipes;

option go_package = "recipes/generated";

message AddRecipeRequest {
    Recipe recipe = 1;
}

message AddRecipeResponse {
    bool success = 1;
}

message ListAllRecipesRequest {}

message ListAllRecipesResponse {
    Recipe recipe = 1;
}

message Recipe {
    string name = 1;
    string cuisine = 2;
}

message Ingredient {
    string name = 1;
    string quantity = 2;
}

message ListAllIngredientsAtHomeRequest {
    Ingredient ingredient = 1;
}

message ListAllIngredientsAtHomeResponse {
    bool success = 1;
}

message GetIngredientsForAllRecipesRequest {
    Recipe recipe = 1;
}

message GetIngredientsForAllRecipesResponse {
    Ingredient ingredient = 1;
}

service RecipesService {
    // unary
    rpc AddRecipe (AddRecipeRequest) returns (AddRecipeResponse);

    // server-streaming
    rpc ListAllRecipes (ListAllRecipesRequest) returns (stream ListAllRecipesResponse);

    // client-streaming
    rpc ListAllIngredientsAtHome (stream ListAllIngredientsAtHomeRequest) returns (ListAllIngredientsAtHomeResponse);

    // Bidirectional-streaming
    rpc GetIngredientsForAllRecipes (stream GetIngredientsForAllRecipesRequest) returns (stream GetIngredientsForAllRecipesResponse);
}